Implement missing value analysis and add outlier detection and imputation

--- a/notebooks/benin_eda.ipynb
+++ b/notebooks/benin_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "id": "2f9635b7",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,9 @@
     "\n",
     "# 1. Setup\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy import stats\n",
+    "\n",
     "\n",
     "# Load data\n",
     "df = pd.read_csv('../data/benin-malanville.csv', parse_dates=['Timestamp'])"
@@ -18,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "id": "ce55168c",
    "metadata": {},
    "outputs": [
@@ -128,7 +131,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "45aabfb3-6133-4438-b099-dc4e7bd2381b",
+       "ref": "154ee1b9-a562-4760-b6fc-296ae50be6ca",
        "rows": [
         [
          "count",
@@ -595,7 +598,8 @@
       "----------------------------------------------------------------------\n",
       "Columns with >5% missing values:\n",
       "Comments    100.0\n",
-      "dtype: float64\n"
+      "dtype: float64\n",
+      "----------------------------------------------------------------------\n"
      ]
     }
    ],
@@ -609,11 +613,67 @@
     "print(\"Columns with >5% missing values:\")\n",
     "print(missing_report[missing_report > 5].sort_values(ascending=False))\n",
     "\n",
-    "# Visualize missing data\n",
-    "# plt.figure(figsize=(10, 6))\n",
-    "# sns.heatmap(df.isnull(), cbar=False, cmap='viridis')\n",
-    "# plt.title('Missing Values Heatmap')\n",
-    "# plt.show()"
+    "print(\"----------------------------------------------------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "d771b4dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values in outlier columns before cleaning: \n",
+      "GHI       0\n",
+      "DNI       0\n",
+      "DHI       0\n",
+      "ModA      0\n",
+      "ModB      0\n",
+      "WS        0\n",
+      "WSgust    0\n",
+      "dtype: int64\n",
+      "----------------------------------------------------------------------\n",
+      "Number of outliers per column:\n",
+      "GHI         89\n",
+      "DNI          0\n",
+      "DHI       3738\n",
+      "ModA        27\n",
+      "ModB        63\n",
+      "WS        3109\n",
+      "WSgust    3500\n",
+      "dtype: int64\n",
+      "----------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Columns to check for outliers\n",
+    "outlier_cols = ['GHI', 'DNI', 'DHI', 'ModA', 'ModB', 'WS', 'WSgust']\n",
+    "\n",
+    "# Check Missing values\n",
+    "missing_values = df[outlier_cols].isnull().sum()\n",
+    "print(\"Missing values in outlier columns before cleaning: \")\n",
+    "print(missing_values)\n",
+    "print(\"----------------------------------------------------------------------\")\n",
+    "# Compute Z-scores and flag outliers\n",
+    "z_scores = np.abs(stats.zscore(df[outlier_cols], nan_policy='omit'))\n",
+    "outliers = (z_scores > 3)\n",
+    "print(\"Number of outliers per column:\")\n",
+    "print(pd.DataFrame(outliers, columns=outlier_cols).sum())\n",
+    "print(\"----------------------------------------------------------------------\")\n",
+    "\n",
+    "\n",
+    "df_clean = df.copy()\n",
+    "\n",
+    "# Impute missing values in key columns with median\n",
+    "for col in outlier_cols:\n",
+    "    df_clean[col] = df_clean[col].fillna(df_clean[col].median())\n",
+    "\n",
+    "# save the cleaned data\n",
+    "df_clean.to_csv('../data/benin_clean.csv', index=False)\n"
    ]
   }
  ],
