Add comments, docstrings, and a clear README

--- a/notebooks/benin_eda.ipynb
+++ b/notebooks/benin_eda.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f14771ca",
+   "metadata": {},
+   "source": [
+    "# Benin Solar Data EDA\n",
+    "\n",
+    "This notebook profiles, cleans, and explores Benin’s solar dataset to prepare it for comparison and region-ranking tasks."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 82,
    "id": "2f9635b7",
    "metadata": {},
    "outputs": [],
@@ -26,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 83,
    "id": "ce55168c",
    "metadata": {},
    "outputs": [
@@ -136,7 +146,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "7ceeedb5-2349-4dda-a8f6-9d8beeb465ee",
+       "ref": "b6ba082c-4f63-4de5-b8c6-d482102c5500",
        "rows": [
         [
          "count",
@@ -630,7 +640,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 84,
    "id": "d771b4dd",
    "metadata": {},
    "outputs": [
@@ -677,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 85,
    "id": "a8ad010c",
    "metadata": {},
    "outputs": [
@@ -704,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 86,
    "id": "2428b399",
    "metadata": {},
    "outputs": [
@@ -729,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 87,
    "id": "d00864bb",
    "metadata": {},
    "outputs": [
@@ -811,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 88,
    "id": "b2ad60f2",
    "metadata": {},
    "outputs": [
@@ -864,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 89,
    "id": "bbd78f08",
    "metadata": {},
    "outputs": [
@@ -924,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 90,
    "id": "4a2ddf55",
    "metadata": {},
    "outputs": [
