implemented EDA on Togo Dataset using data_utils python helper class

--- a/notebooks/benin_eda.ipynb
+++ b/notebooks/benin_eda.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Benin Solar Data EDA\n",
     "\n",
-    "This notebook profiles, cleans, and explores Benin’s solar dataset to prepare it for comparison and region-ranking tasks."
+    "This notebook profiles, cleans, and explores Benin's solar dataset to prepare it for comparison and region-ranking tasks."
    ]
   },
   {
